kubernetes/apps/infrastructure/keycloak/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-external-ingress
  labels:
    name: keycloak-external-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: external.gs-farm.net
    kubernetes.io/ingress.class: external
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: external
  tls:
    - hosts:
        - "elvis.gs-farm.net"
      secretName: keycloak-secret
  rules:
  - host: elvis.gs-farm.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak
            port:
              number: 8080
---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-internal-ingress
  labels:
    name: keycloak-internal-ingress
  annotations:
    external-dns.alpha.kubernetes.io/target: internal.gs-farm.net
    kubernetes.io/ingress.class: internal
    kubernetes.io/tls-acme: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-production"
spec:
  ingressClassName: internal
  tls:
    - hosts:
        - "auth-console.gs-farm.net"
        - "elvis.gs-farm.net"
      secretName: keycloak-secret
  rules:
  - host: elvis.gs-farm.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak
            port:
              number: 8080
  - host: auth-console.gs-farm.net
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: keycloak
            port:
              number: 8080
